Font/text readability update and login page fix

--- a/depot_locations.html
+++ b/depot_locations.html
@@ -13,6 +13,7 @@
         <meta name="Author" content="Team DTC-13" />
 
         <!-- CSS -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=VT323&display=swap" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
         <link rel="stylesheet" href="styles/reset.css" />
@@ -44,10 +45,14 @@
                 <a href="depot_display.html"><button class="depot_location_button">Capital Salvage</button></a>
             </div>
             <div id="depot_buttons">
-                <a href="depot_display.html"><button class="depot_location_button">Go Green Bottle Depot<br>and Recycling</button></a>
+                <a href="depot_display.html"
+                    ><button class="depot_location_button">Go Green Bottle Depot<br />and Recycling</button></a
+                >
             </div>
             <div id="depot_buttons">
-                <a href="depot_display.html"><button class="depot_location_button">North Shore Recycling<br>and Waste Centre</button></a>
+                <a href="depot_display.html"
+                    ><button class="depot_location_button">North Shore Recycling<br />and Waste Centre</button></a
+                >
             </div>
             <div id="depot_buttons">
                 <a href="depot_display.html"><button class="depot_location_button">North Star Metal Recycling</button></a>
