--- a/depot_display_from_profile.html
+++ b/depot_display_from_profile.html
@@ -1,81 +1,77 @@
 <!DOCTYPE html>
 
 <html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="robots" content="index, follow" />
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="robots" content="index, follow" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <title>Trash to treasure</title>
 
-    <title>Trash to treasure</title>
+        <meta name="Description" content="DTC team 13 mobile-first recycling app" />
+        <meta name="Author" content="Team DTC-13" />
 
-    <meta name="Description" content="DTC team 13 mobile-first recycling app" />
-    <meta name="Author" content="Team DTC-13" />
+        <!-- CSS -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=VT323&display=swap" />
 
-    <!-- CSS -->
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="styles/reset.css" />
-    <link rel="stylesheet" href="styles/header_and_footer.css" />
-    <link rel="stylesheet" href="styles/style.css" />
-    <link rel="stylesheet" href="styles/depot_display.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+        <link rel="stylesheet" href="styles/reset.css" />
+        <link rel="stylesheet" href="styles/header_and_footer.css" />
+        <link rel="stylesheet" href="styles/style.css" />
+        <link rel="stylesheet" href="styles/depot_display.css" />
 
-    <!-- Firebase related CSS, JS, and JQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-    <script src="./scripts/firebaseAPI_DTC13.js"></script>
-    <link href="https://api.mapbox.com/mapbox-gl-js/v2.7.0/mapbox-gl.css" rel="stylesheet">
-    <script src="https://api.mapbox.com/mapbox-gl-js/v2.7.0/mapbox-gl.js"></script>
-</head>
+        <!-- Firebase related CSS, JS, and JQuery -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+        <script src="./scripts/firebaseAPI_DTC13.js"></script>
+        <link href="https://api.mapbox.com/mapbox-gl-js/v2.7.0/mapbox-gl.css" rel="stylesheet" />
+        <script src="https://api.mapbox.com/mapbox-gl-js/v2.7.0/mapbox-gl.js"></script>
+    </head>
 
-<body>
-    <!-- Navbar placeholder -->
-    <header id="navbar_container">
-        <nav id="navbar_placeholder"></nav>
-    </header>
-    <!-- Navbar placeholder -->
+    <body>
+        <!-- Navbar placeholder -->
+        <header id="navbar_container">
+            <nav id="navbar_placeholder"></nav>
+        </header>
+        <!-- Navbar placeholder -->
 
-    <div id="main_container">
-        <div class="depot_location">
-            <div class="location_name"><span class="insert_name"></span></div>
-            <div id='map'></div>
-            <div class="location_phone"><span class="insert_phone"></span></div>
-            <div class="location_address"><span class="insert_address"></span></div>
-            <div class="location_website"><span class="insert_website"></span></div>
-            <div class="location_hours">
-                <div >Monday:<span class="monday"></span></div>
-                <div >Tuesday:<span class="tuesday"></span></div>
-                <div >Wednesday:<span class="wednesday"></span></div>
-                <div >Thursday:<span class="thursday"></span></div>
-                <div >Friday:<span class="friday"></span></div>
-                <div >Saturday:<span class="saturday"></span></div>
-                <div >Sunday:<span class="sunday"></span></div>
+        <div id="main_container">
+            <div class="depot_location">
+                <div class="location_name"><span class="insert_name"></span></div>
+                <div id="map"></div>
+                <div class="location_phone"><span class="insert_phone"></span></div>
+                <div class="location_address"><span class="insert_address"></span></div>
+                <div class="location_website"><span class="insert_website"></span></div>
+                <div class="location_hours">
+                    <div>Monday:<span class="monday"></span></div>
+                    <div>Tuesday:<span class="tuesday"></span></div>
+                    <div>Wednesday:<span class="wednesday"></span></div>
+                    <div>Thursday:<span class="thursday"></span></div>
+                    <div>Friday:<span class="friday"></span></div>
+                    <div>Saturday:<span class="saturday"></span></div>
+                    <div>Sunday:<span class="sunday"></span></div>
+                </div>
+                <div class="location_notes"><span class="insert_notes"></span></div>
             </div>
-            <div class="location_notes"><span class="insert_notes"></span></div>
+            <div class="temp_favourite_button">
+                <!-- Updated button with a star icon -->
+                <button id="favoriteButton" class="favorite-button"><span class="material-icons">star_border</span> Favorite</button>
+            </div>
         </div>
-        <div class="temp_favourite_button">
-            <!-- Updated button with a star icon -->
-            <button id="favoriteButton" class="favorite-button">
-                <span class="material-icons">star_border</span> Favorite
-            </button>
-        </div>
-    </div>
 
-    <!-- Footer placeholder -->
-    <footer id="footer_container">
-        <nav id="footer_placeholder"></nav>
-    </footer>
-    <!-- Footer placeholder -->
-    <script src="./scripts/skeleton.js"></script>
-    <script src="./scripts/depot_display_from_profile.js"></script>
-    <script src="scripts/map_from_profile.js"></script>
-</body>
-
+        <!-- Footer placeholder -->
+        <footer id="footer_container">
+            <nav id="footer_placeholder"></nav>
+        </footer>
+        <!-- Footer placeholder -->
+        <script src="./scripts/skeleton.js"></script>
+        <script src="./scripts/depot_display_from_profile.js"></script>
+        <script src="scripts/map_from_profile.js"></script>
+    </body>
 </html>
