--- a/login.html
+++ b/login.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 
 <html lang="en">
-    
-<head>
+    <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,11 +13,16 @@
         <meta name="Author" content="Team DTC-13" />
 
         <!-- CSS -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=VT323&display=swap" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-        <link rel="stylesheet" href="styles/reset.css" /> <!-- Reset CSS for consistent styling across browsers -->
-        <link rel="stylesheet" href="styles/login.css">
-
+        <link rel="stylesheet" href="styles/reset.css" />
+        <!-- Reset CSS for consistent styling across browsers -->
+        <link rel="stylesheet" href="styles/header_and_footer.css" />
+        <!-- Custom styles for header and footer -->
+        <link rel="stylesheet" href="styles/style.css" />
+        <!-- Reset CSS for consistent styling across browsers -->
+        <link rel="stylesheet" href="styles/login.css" />
 
         <!-- Firebase related CSS, JS, and JQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -28,15 +32,19 @@
         <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
         <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-        <script src="./scripts/firebaseAPI_DTC13.js"></script> <!-- Script for initializing Firebase API -->
-        <script src="./scripts/authentication.js"></script> <!-- Script for handling user authentication -->
+        <script src="./scripts/firebaseAPI_DTC13.js"></script>
+        <!-- Script for initializing Firebase API -->
+        <script src="./scripts/authentication.js"></script>
+        <!-- Script for handling user authentication -->
     </head>
 
     <body>
         <!-- Header section with a placeholder for navigation bar -->
-        <header id="navbar_container">
-            <nav id="navbar_placeholder"></nav>
-        </header>
+        <div id="navbar">
+            <div id="navbar_left">
+                <span class="material-symbols-outlined">compost</span>
+            </div>
+        </div>
         <!-- Navbar placeholder -->
 
         <!-- Main content area, primarily for user authentication -->
@@ -51,10 +59,11 @@
         </main>
 
         <!-- Footer section with a placeholder for additional content or links -->
-        <footer id="footer_container">
-            <nav id="footer_placeholder"></nav>
-        </footer>
+        <div id="footer">
+            <div id="copyright">&copy 2023 Trash to Treasure</div>
+        </div>
         <!-- Footer placeholder -->
+        <!-- Additional JavaScript file for general page functionality -->
+        <script src="./scripts/skeleton.js"></script>
     </body>
-
 </html>
