Depot page css and html refactoring

--- a/depot_locations.html
+++ b/depot_locations.html
@@ -41,39 +41,41 @@
             <div id="greeting_text">
                 <h1 id="page_title">Depot Locations</h1>
             </div>
-            <div id="depot_buttons">
-                <a href="depot_display.html"><button class="depot_location_button">Capital Salvage</button></a>
-            </div>
-            <div id="depot_buttons">
-                <a href="depot_display.html"
-                    ><button class="depot_location_button">Go Green Bottle Depot<br />and Recycling</button></a
-                >
-            </div>
-            <div id="depot_buttons">
-                <a href="depot_display.html"
-                    ><button class="depot_location_button">North Shore Recycling<br />and Waste Centre</button></a
-                >
-            </div>
-            <div id="depot_buttons">
-                <a href="depot_display.html"><button class="depot_location_button">North Star Metal Recycling</button></a>
-            </div>
-            <div id="depot_buttons">
-                <a href="depot_display.html"><button class="depot_location_button">Regional Recycling Vancouver Bottle Depot</button></a>
-            </div>
-            <div id="depot_buttons">
-                <a href="depot_display.html"><button class="depot_location_button">UNA Green Depot</button></a>
-            </div>
-            <div id="depot_buttons">
-                <a href="depot_display.html"><button class="depot_location_button">United We Can</button></a>
-            </div>
-            <div id="depot_buttons">
-                <a href="depot_display.html"><button class="depot_location_button">Vancouver Central Return It Express Depot</button></a>
-            </div>
-            <div id="depot_buttons">
-                <a href="depot_display.html"><button class="depot_location_button">Vancouver Zero Waste Centre</button></a>
-            </div>
-            <div id="depot_buttons">
-                <a href="depot_display.html"><button class="depot_location_button">Yaletown Return it Express Depot</button></a>
+            <div id=buttons">
+                <div class="depot_button">
+                    <a href="depot_display.html"><button class="depot_location_button">Capital Salvage</button></a>
+                </div>
+                <div class="depot_button">
+                    <a href="depot_display.html"
+                        ><button class="depot_location_button">Go Green Bottle Depot<br />and Recycling</button></a
+                    >
+                </div>
+                <div class="depot_button">
+                    <a href="depot_display.html"
+                        ><button class="depot_location_button">North Shore Recycling<br />and Waste Centre</button></a
+                    >
+                </div>
+                <div class="depot_button">
+                    <a href="depot_display.html"><button class="depot_location_button">North Star Metal Recycling</button></a>
+                </div>
+                <div class="depot_button">
+                    <a href="depot_display.html"><button class="depot_location_button">Regional Recycling Vancouver Bottle Depot</button></a>
+                </div>
+                <div class="depot_button">
+                    <a href="depot_display.html"><button class="depot_location_button">UNA Green Depot</button></a>
+                </div>
+                <div class="depot_button">
+                    <a href="depot_display.html"><button class="depot_location_button">United We Can</button></a>
+                </div>
+                <div class="depot_button">
+                    <a href="depot_display.html"><button class="depot_location_button">Vancouver Central Return It Express Depot</button></a>
+                </div>
+                <div class="depot_button">
+                    <a href="depot_display.html"><button class="depot_location_button">Vancouver Zero Waste Centre</button></a>
+                </div>
+                <div class="depot_button">
+                    <a href="depot_display.html"><button class="depot_location_button">Yaletown Return it Express Depot</button></a>
+                </div>
             </div>
         </div>
 
