Fix all layout and CSS issues for existing pages

--- a/profile.html
+++ b/profile.html
@@ -44,19 +44,19 @@
                 <form>
                     <fieldset id="personalInfoFields" disabled>
                         <div class="presentation_field">
-                            <label>Name</label>
+                            <label>Name: </label>
                             <input type="text" id="nameInput" class="form-control" placeholder="Enter your name" />
                         </div>
                         <div class="presentation_field">
-                            <label>School</label>
+                            <label>School: </label>
                             <input type="text" id="schoolInput" class="form-control" placeholder="Enter your school" />
                         </div>
                         <div class="presentation_field">
-                            <label>City</label>
+                            <label>City: </label>
                             <input type="text" id="cityInput" class="form-control" placeholder="Enter your city" />
                         </div>
                         <div class="presentation_field">
-                            <label>Email</label>
+                            <label>Email: </label>
                             <input type="text" id="emailInput" class="form-control" placeholder="Enter your city" />
                         </div>
                         <div id="profile_favourite_depots">
