--- a/profile.html
+++ b/profile.html
@@ -70,6 +70,8 @@
                     <div id="profile_buttons">
                         <button type="button" class="profile_button_styles" onclick="editUserInfo()">Edit</button>
                         <button type="button" class="profile_button_styles" onclick="saveUserInfo()">Save</button>
+                        <!-- Logout button -->
+                        <button type="button" class="profile_button_styles" onclick="logout()">Logout</button>
                     </div>
                 </form>
             </div>
