--- a/depot_display.html
+++ b/depot_display.html
@@ -63,7 +63,25 @@
                 <button id="favoriteButton" class="favorite-button"><span class="material-icons">star_border</span> Favorite</button>
             </div>
         </div>
-
+        <div id="review_section">
+            <h3>User Reviews</h3>
+            <div id="reviews_container"></div>
+            <div id="review_form">
+                
+                <div id="star_rating">
+                    <div id="star_rating">
+                        <span class="material-icons star" onclick="setRating(1)">star_border</span>
+                        <span class="material-icons star" onclick="setRating(2)">star_border</span>
+                        <span class="material-icons star" onclick="setRating(3)">star_border</span>
+                        <span class="material-icons star" onclick="setRating(4)">star_border</span>
+                        <span class="material-icons star" onclick="setRating(5)">star_border</span>
+                    </div>
+                    
+                </div>
+                <textarea id="review_text" placeholder="Write your review..." required></textarea>
+                <button onclick="submitReview()">Submit Review</button>
+            </div>
+        </div>
         <!-- Footer placeholder -->
         <footer id="footer_container">
             <nav id="footer_placeholder"></nav>
