Update Review Button css

--- a/depot_display.html
+++ b/depot_display.html
@@ -64,7 +64,7 @@
             </div>
         </div>
         <div id="review_section">
-            <h3>User Reviews</h3>
+            <h3> Reviews</h3>
             
             <div id="reviews_container"></div>
             <div id="review_form">
@@ -80,7 +80,8 @@
                     
                 </div>
                 <textarea id="review_text" placeholder="Write your review..." required></textarea>
-                <button onclick="submitReview()">Submit Review</button>
+                <button onclick="submitReview()" id="submit_review_button">Submit Review</button>
+
             </div>
         </div>
         <!-- Footer placeholder -->
