load category buttons to remove empty buttons

--- a/material_subcategories.html
+++ b/material_subcategories.html
@@ -47,15 +47,8 @@
             <div id="greeting_text">
                 <h1 id="page_title">Subcategories</h1>
             </div>
-            <div id="buttons">
-                <!-- Series of buttons, each representing a different subcategory -->
-                <button id="individual_buttons" class="button0 main_button"></button>
-                <button id="individual_buttons" class="button1 main_button"></button>
-                <button id="individual_buttons" class="button2 main_button"></button>
-                <button id="individual_buttons" class="button3 main_button"></button>
-                <button id="individual_buttons" class="button4 main_button"></button>
-                <button id="individual_buttons" class="button5 main_button"></button>
-                <button id="individual_buttons" class="button6 main_button"></button>
+            <div id="subcategoriesContainer">
+                <!-- Dynamic subcategory buttons will be appended here -->
             </div>
         </div>
 
