--- a/material_categories.html
+++ b/material_categories.html
@@ -47,13 +47,8 @@
             <div id="greeting_text">
                 <h1 id="page_title">Categories</h1>
             </div>
-            <div id="buttons">
-                <!-- Buttons for each category like Garbage, Glass, Hazardous, etc. -->
-                <button class="category_1 main_button"></button>
-                <button class="category_2 main_button"></button>
-                <button class="category_3 main_button"></button>
-                <button class="category_4 main_button"></button>
-                <button class="category_5 main_button"></button>
+            <div id="categoriesContainer">
+                <!-- Dynamic category buttons will be appended here -->
             </div>
         </div>
 
