Dynamically load valid depot locations

--- a/display_material_information.html
+++ b/display_material_information.html
@@ -54,12 +54,7 @@
                     description: <br />
                     <div class="material_description"></div>
                 </div>
-                <div class="locations">
-                    locations: <br />
-                    <div class="depot_location"><span class="location_1"></span></div>
-                    <div class="depot_location"><span class="location_2"></span></div>
-                    <div class="depot_location"><span class="location_3"></span></div>
-                </div>
+                <div class="locations"></div>
             </div>
         </div>
 
