--- a/material_subcategories.html
+++ b/material_subcategories.html
@@ -45,7 +45,7 @@
         <!-- Main content area containing buttons for different subcategories -->
         <div id="main_container">
             <div id="greeting_text">
-                <h1 id="page_title">Subcategories</h1>
+                <h1 id="page_title"></h1>
             </div>
             <div id="subcategoriesContainer">
                 <!-- Dynamic subcategory buttons will be appended here -->
