Add more detail to search button label

--- a/homepage.html
+++ b/homepage.html
@@ -49,7 +49,7 @@
             <div id="buttons">
                 <!-- Buttons linking to different pages of the app -->
                 <button class="search_button main_button">
-                    <div class="button_text">Search</div>
+                    <div class="button_text">Search Material Categories</div>
                     <div class="button_img">
                         <span class="material-symbols-outlined"> search </span>
                     </div>
@@ -61,7 +61,7 @@
                     </div>
                 </button>
                 <button class="other_resources_button main_button">
-                    <div class="button_text">Other Resources</div>
+                    <div class="button_text">Other Online Resources</div>
                     <div class="button_img">
                         <span class="material-symbols-outlined"> menu_book </span>
                     </div>
