--- a/profile.html
+++ b/profile.html
@@ -60,11 +60,11 @@
                             <input type="text" id="emailInput" class="form-control" placeholder="Enter your city" />
                         </div>
                         <div id="profile_favourite_depots">
-                            <p>Favourite depots: <br /></p>
+                            <!-- <p>Favourite depots: <br /></p>
                             <div class="favourite_display favourite_0"></div>
                             <div class="favourite_display favourite_1"></div>
                             <div class="favourite_display favourite_2"></div>
-                            <div class="favourite_display favourite_3"></div>
+                            <div class="favourite_display favourite_3"></div> -->
                         </div>
                     </fieldset>
                     <div id="profile_buttons">
