--- a/depot_display_from_profile.html
+++ b/depot_display_from_profile.html
@@ -22,6 +22,7 @@
         <link rel="stylesheet" href="styles/header_and_footer.css" />
         <link rel="stylesheet" href="styles/style.css" />
         <link rel="stylesheet" href="styles/depot_display.css" />
+        <link rel="stylesheet" href="styles/depot_display_from_profile.css" />
 
         <!-- Firebase related CSS, JS, and JQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -42,29 +43,27 @@
         <!-- Navbar placeholder -->
 
         <div id="main_container">
-            <div class="depot_location">
-                <div class="location_name"><span class="insert_name"></span></div>
-                <div id="map"></div>
-                <div class="location_phone"><span class="insert_phone"></span></div>
-                <div class="location_address"><span class="insert_address"></span></div>
-                <div class="location_website"><span class="insert_website"></span></div>
-                <div class="location_hours">
-                    <div>Monday:<span class="monday"></span></div>
-                    <div>Tuesday:<span class="tuesday"></span></div>
-                    <div>Wednesday:<span class="wednesday"></span></div>
-                    <div>Thursday:<span class="thursday"></span></div>
-                    <div>Friday:<span class="friday"></span></div>
-                    <div>Saturday:<span class="saturday"></span></div>
-                    <div>Sunday:<span class="sunday"></span></div>
-                </div>
-                <div class="location_notes"><span class="insert_notes"></span></div>
+            <div class="location_name"><span class="insert_name"></span></div>
+            <div id="map"></div>
+            <div class="location_phone"><span class="insert_phone"></span></div>
+            <div class="location_address"><span class="insert_address"></span></div>
+            <div class="location_website"><span class="insert_website"></span></div>
+            <div class="location_hours">
+                <div>Monday:<span class="monday"></span></div>
+                <div>Tuesday:<span class="tuesday"></span></div>
+                <div>Wednesday:<span class="wednesday"></span></div>
+                <div>Thursday:<span class="thursday"></span></div>
+                <div>Friday:<span class="friday"></span></div>
+                <div>Saturday:<span class="saturday"></span></div>
+                <div>Sunday:<span class="sunday"></span></div>
             </div>
-            <div class="temp_favourite_button">
+            <div class="location_notes"><span class="insert_notes"></span></div>
+
+            <div class="favourite_button">
                 <!-- Updated button with a star icon -->
                 <button id="favoriteButton" class="favorite-button"><span class="material-icons">star_border</span> Favorite</button>
             </div>
         </div>
-
         <!-- Footer placeholder -->
         <footer id="footer_container">
             <nav id="footer_placeholder"></nav>
