--- a/homepage.html
+++ b/homepage.html
@@ -48,7 +48,7 @@
             <div id="buttons">
                 <!-- Buttons linking to different pages of the app -->
                 <button class="search_button main_button">
-                    <div class="button_text">Search Material Categories</div>
+                    <div class="button_text">Search Material <br />Categories</div>
                     <div class="button_img">
                         <span class="material-symbols-outlined"> search </span>
                     </div>
