--- a/depot_locations.html
+++ b/depot_locations.html
@@ -41,7 +41,7 @@
             <div id="greeting_text">
                 <h1 id="page_title">Depot Locations</h1>
             </div>
-            <div id=buttons">
+            <div id="buttons">
                 <div class="depot_button">
                     <a href="depot_display.html"><button class="depot_location_button">Capital Salvage</button></a>
                 </div>
