HTML cleanup and notes

--- a/depot_display.html
+++ b/depot_display.html
@@ -15,7 +15,6 @@
 
         <!-- CSS -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=VT323&display=swap" />
-
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
         <link rel="stylesheet" href="styles/reset.css" />
@@ -42,11 +41,17 @@
         <!-- Navbar placeholder -->
 
         <div id="main_container">
+            <!-- Displays location name -->
             <div class="location_name"><span class="insert_name"></span></div>
+            <!-- Displays location map -->
             <div id="map"></div>
+            <!-- Displays location phone number -->
             <div class="location_phone"><span class="insert_phone"></span></div>
+            <!-- Displays location address -->
             <div class="location_address"><span class="insert_address"></span></div>
+            <!-- Displays location website -->
             <div class="location_website"><span class="insert_website"></span></div>
+            <!-- Displays location hours -->
             <div class="location_hours">
                 <div>Monday: <span class="monday"></span></div>
                 <div>Tuesday: <span class="tuesday"></span></div>
@@ -56,12 +61,15 @@
                 <div>Saturday: <span class="saturday"></span></div>
                 <div>Sunday: <span class="sunday"></span></div>
             </div>
+            <!-- Displays location notes -->
             <div class="location_notes"><span class="insert_notes"></span></div>
 
+            <!-- Displays the favourite button -->
             <div class="favourite_button">
                 <!-- Updated button with a star icon -->
                 <button id="favoriteButton" class="favorite-button"><span class="material-icons">star_border</span> Favorite</button>
             </div>
+            <!-- Displays the review section -->
             <div id="review_section">
                 <h3>Reviews</h3>
 
