--- a/text/footer.html
+++ b/text/footer.html
@@ -1,3 +1,4 @@
+<!-- footer code, dynamically loaded via js -->
 <div id="footer">
     <button id="back_button" class="footer_button">
         <span class="material-symbols-outlined"> arrow_back_ios </span>
