--- a/text/nav_after_login.html
+++ b/text/nav_after_login.html
@@ -1,3 +1,4 @@
+<!-- post-login navbar code, dynamically loaded via js -->
 <div id="navbar">
     <div id="navbar_left">
         <span class="material-symbols-outlined" id="compost_id">compost</span>
