--- a/text/nav_before_login.html
+++ b/text/nav_before_login.html
@@ -1,3 +1,4 @@
+<!-- Pre-login navbar code, dynamically loaded via js -->
 <div id="navbar">
     <div id="navbar_left">
         <span class="material-symbols-outlined">compost</span>
