HTML commenting on all pages done

--- a/depot_display.html
+++ b/depot_display.html
@@ -40,6 +40,7 @@
         </header>
         <!-- Navbar placeholder -->
 
+        <!-- Main content container -->
         <div id="main_container">
             <!-- Displays location name -->
             <div class="location_name"><span class="insert_name"></span></div>
