--- a/depot_locations.html
+++ b/depot_locations.html
@@ -37,10 +37,14 @@
         </header>
         <!-- Navbar placeholder -->
 
+        <!-- Main content container -->
         <div id="main_container">
+            <!-- Display custom page info -->
             <div id="greeting_text">
                 <h1 id="page_title">Depot Locations</h1>
             </div>
+
+            <!-- Display depot location buttons -->
             <div id="buttons">
                 <div class="depot_button">
                     <a href="depot_display.html"><button class="depot_location_button">Capital Salvage</button></a>
