--- a/display_material_information.html
+++ b/display_material_information.html
@@ -37,23 +37,31 @@
         </header>
         <!-- Navbar placeholder -->
 
+        <!-- Display main page content -->
         <div id="main_container">
+            <!-- Display custom page info -->
             <div id="greeting_text">
                 <h1>Details</h1>
             </div>
+            <!-- Detail info for the material chosen -->
             <div class="general_information">
+                <!-- Image display -->
                 <div class="material_image"><span class="insert_image">image placeholder</span></div>
+                <!-- Material specifications -->
                 <div class="material_specifications">
                     <div class="name">name: <br /><span class="insert_name"></span></div>
                     <div class="type">type: <br /><span class="insert_type"></span></div>
                     <div class="recyclable">recyclable: <br /><span class="insert_boolean"></span></div>
                 </div>
             </div>
+            <!-- Depot information -->
             <div class="depot_information">
+                <!-- Material description -->
                 <div class="description">
                     description: <br />
                     <div class="material_description"></div>
                 </div>
+                <!-- Depot locations -->
                 <div class="locations"></div>
             </div>
         </div>
