--- a/homepage.html
+++ b/homepage.html
@@ -42,9 +42,11 @@
 
         <!-- Main content area with buttons for various features of the app -->
         <div id="main_container">
+            <!-- Displays custom user greeting -->
             <div id="greeting_text">
                 <h1>Hello, <span class="name_goes_here"></span></h1>
             </div>
+            <!-- Displays main buttons for the app -->
             <div id="buttons">
                 <!-- Buttons linking to different pages of the app -->
                 <button class="search_button main_button">
