--- a/other_resources.html
+++ b/other_resources.html
@@ -14,7 +14,6 @@
 
         <!-- CSS -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=VT323&display=swap" />
-
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
         <link rel="stylesheet" href="styles/reset.css" />
@@ -38,15 +37,19 @@
         </header>
         <!-- Navbar placeholder -->
 
+        <!-- Main content container -->
         <div id="main_container">
+            <!-- Displays category of page -->
             <div id="greeting_text">
                 <h1>Resources</h1>
             </div>
+            <!-- Displays Recycle BC external link -->
             <div class="resource resource1" onclick="location.href='https://recyclebc.ca/'">
                 <img src="images/recycle_bc_image.jpg" alt="" />
                 <p>Click here to learn about recycle BC!</p>
             </div>
 
+            <!-- Displays different recycle bins -->
             <div
                 class="resource resource2"
                 onclick="location.href='https://rcbc.ca/our-faqs/where-can-i-get-a-blue-box-or-recycling-bin-for-my-home/'"
@@ -55,6 +58,7 @@
                 <p>Click here to learn about recycling bins</p>
             </div>
 
+            <!-- Displays hazardous materials -->
             <div class="resource resource3" onclick="location.href='https://recyclebc.ca/5-tips-recycle-hazardous-material-right/'">
                 <img src="images/hazardous_materials_image.png" alt="" />
                 <p>Click me to learn about disposing hazardous materials</p>
