Debug profile page and polish styling

--- a/profile.html
+++ b/profile.html
@@ -67,6 +67,7 @@
                             <input type="text" id="emailInput" class="form-control" placeholder="Enter your city" />
                         </div>
                         <!-- Displays dynamically loaded favourite depots -->
+                        <div>Favorite Depots:</div>
                         <div id="profile_favourite_depots"></div>
                     </fieldset>
                     <!-- Displays buttons for editing and saving user info -->
