Adjust styling of pages

--- a/depot_locations.html
+++ b/depot_locations.html
@@ -40,8 +40,10 @@
         <!-- Main content container -->
         <div id="main_container">
             <!-- Display custom page info -->
-            <div id="greeting_text">
-                <h1 id="page_title">Depot Locations</h1>
+            <div id="title_container">
+                <div id="greeting_text">
+                    <h1 id="page_title">Depot Locations</h1>
+                </div>
             </div>
 
             <!-- Display depot location buttons -->
