--- a/display_material_information.html
+++ b/display_material_information.html
@@ -40,8 +40,10 @@
         <!-- Display main page content -->
         <div id="main_container">
             <!-- Display custom page info -->
-            <div id="greeting_text">
-                <h1>Details</h1>
+            <div id="title_container">
+                <div id="greeting_text">
+                    <h1>Details</h1>
+                </div>
             </div>
             <!-- Detail info for the material chosen -->
             <div class="general_information">
