--- a/homepage.html
+++ b/homepage.html
@@ -43,8 +43,12 @@
         <!-- Main content area with buttons for various features of the app -->
         <div id="main_container">
             <!-- Displays custom user greeting -->
-            <div id="greeting_text">
-                <h1>Hello, <span class="name_goes_here"></span></h1>
+            <div id="title_container">
+                <div>
+                    <div id="greeting_text">
+                        <h1>Hello, <span class="name_goes_here"></span></h1>
+                    </div>
+                </div>
             </div>
             <!-- Displays main buttons for the app -->
             <div id="buttons">
