--- a/material_categories.html
+++ b/material_categories.html
@@ -44,8 +44,10 @@
 
         <!-- Main content area with buttons for different recycling categories -->
         <div id="main_container">
-            <div id="greeting_text">
-                <h1 id="page_title">Categories</h1>
+            <div id="title_container">
+                <div id="greeting_text">
+                    <h1 id="page_title">Categories</h1>
+                </div>
             </div>
             <div id="categoriesContainer">
                 <!-- Dynamic category buttons will be appended here -->
