--- a/material_subcategories.html
+++ b/material_subcategories.html
@@ -43,8 +43,10 @@
 
         <!-- Main content area containing buttons for different subcategories -->
         <div id="main_container">
-            <div id="greeting_text">
-                <h1 id="page_title"></h1>
+            <div id="title_container">
+                <div id="greeting_text">
+                    <h1 id="page_title"></h1>
+                </div>
             </div>
             <div id="subcategoriesContainer">
                 <!-- Dynamic subcategory buttons will be appended here -->
