--- a/other_resources.html
+++ b/other_resources.html
@@ -40,8 +40,10 @@
         <!-- Main content container -->
         <div id="main_container">
             <!-- Displays category of page -->
-            <div id="greeting_text">
-                <h1>Resources</h1>
+            <div id="title_container">
+                <div id="greeting_text">
+                    <h1>Resources</h1>
+                </div>
             </div>
             <!-- Displays Recycle BC external link -->
             <div class="resource resource1" onclick="location.href='https://recyclebc.ca/'">
