--- a/profile.html
+++ b/profile.html
@@ -40,7 +40,9 @@
         <!-- Main content container -->
         <div id="main_container">
             <!-- Displays user name -->
-            <h1 id="greeting_text">Hello, <span class="name_goes_here"></span></h1>
+            <div id="title_container">
+                <h1 id="greeting_text">Hello, <span class="name_goes_here"></span></h1>
+            </div>
             <!-- Displays user profile picture -->
             <div id="profile-info-display">
                 <form>
