Dynamically load accepted materials of depots

--- a/depot_display.html
+++ b/depot_display.html
@@ -52,7 +52,7 @@
                 <!-- Displays location address -->
                 <div class="location_address"><span class="insert_address"></span></div>
                 <!-- Displays location website -->
-                <div class="location_website"><span class="insert_website"></span></div>
+                <div class="location_accepted_materials"><span class="insert_accepted_materials"></span></div>
                 <!-- Displays location hours -->
                 <div class="location_hours">
                     <div>Monday: <span class="monday"></span></div>
@@ -63,8 +63,6 @@
                     <div>Saturday: <span class="saturday"></span></div>
                     <div>Sunday: <span class="sunday"></span></div>
                 </div>
-                <!-- Displays location notes -->
-                <div class="location_notes"><span class="insert_notes"></span></div>
                 <!-- Displays the favourite button -->
                 <div class="favourite_button">
                     <!-- Updated button with a star icon -->
