Debug materials page location buttons

--- a/display_material_information.html
+++ b/display_material_information.html
@@ -64,6 +64,7 @@
                     <div class="material_description"></div>
                 </div>
                 <!-- Depot locations -->
+                <div>Locations: </div>
                 <div class="locations"></div>
             </div>
         </div>
