Remove unused lines of code

--- a/material_subcategories.html
+++ b/material_subcategories.html
@@ -62,7 +62,7 @@
         <!-- Scripts for loading and managing subcategories -->
         <script src="./scripts/skeleton.js"></script>
         <!-- Script for basic page functionality -->
-        <script id="dynamically_load_a_script" src="scripts/load_subcategories.js"></script>
+        <!-- <script src="scripts/load_subcategories.js"></script> -->
         <!-- Script to dynamically load subcategories -->
         <script src="scripts/material_subcategories.js"></script>
         <!-- Script for handling material subcategory data -->
